test/types/range/elliot/badRangeLiterals/badBoundedRange.good
badBoundedRange.chpl:3: error: Bounds of 'low..high' must be integers of compatible types.
